--- a/template/resources/index.html
+++ b/template/resources/index.html
@@ -4,11 +4,14 @@
 <meta charset="UTF-8">
 <title>Your OCaml Application</title>
 </head>
-
 <body>
 <h1>Congratulations</h1>
-<p>You have running your OCaml appliaction.</p>
+<p>You have running your OCaml appliaction based on <a href="http://projects.camlcity.org/projects/dl/ocamlnet-3.7.7/doc/html-main/Intro.html">Ocamlnet</a>.</p>
 <p>You can check out dynamic page that can do factorial for you
 <a href="/dynamic?n=10">here</a>.</p>
+<p>There is also example webhook handler available <a href="/hook">here</a>
+(it needs to be accessed with <code>POST</code> and with
+<code>Content-Type: application/json</code>).</p>
+<p>Webhook log can be accessed at <a href="hooklog/webhook.log">here</a>.</p>
 </body>
 </html>
